[gd_scene load_steps=5 format=3 uid="uid://g0lfao502u7a"]

[ext_resource type="Script" path="res://enemy.gd" id="1_jey3m"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_phfu0"]
radius = 35.0
height = 70.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bp6bh"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dajk1"]

[node name="enemy" type="CharacterBody2D"]
script = ExtResource("1_jey3m")

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_phfu0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_bp6bh")

[node name="EnemyHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitbox"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_dajk1")

[node name="takeDmgCooldown" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="detection_area" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="EnemyHitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="EnemyHitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="takeDmgCooldown" to="." method="_on_take_dmg_cooldown_timeout"]
